Updating code for architectural consistency
- Renamed AlphabeticShift to Alphabetizer
- Created setLines for the components that didn't have it yet
- Deleted getLine and setLine
- Removed unused html file (index.html)

--- a/ui.cyberminer/WebContent/MasterControl.html
+++ b/ui.cyberminer/WebContent/MasterControl.html
@@ -26,7 +26,7 @@
 	  	  var cs = new CircularShift(ls);
 	  	  cs.setup();
 	  	  
-	  	  var as = new AlphabeticShift(cs);
+	  	  var as = new Alphabetizer(cs);
 	  	  as.setup();
 	  	  
 	  	  var output = new Output(cs, as);
