Bug fix update (whitespace and import)
- Bug Fix: multiples whitespaces caused the system to function in an
undesired manner. Update: system now calls trim() function and replaces
multiples whitespaces for a single whitespace.
- Bug Fix: wrong import text on MasterControl caused system crash.
Update: MasterControl now imports the Alphabetizer by its correct text.

--- a/ui.cyberminer/WebContent/MasterControl.html
+++ b/ui.cyberminer/WebContent/MasterControl.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="Input.js"></script>
   <script type="text/javascript" src="LineStorage.js"></script>
   <script type="text/javascript" src="CircularShift.js"></script>
-  <script type="text/javascript" src="AlphabeticShift.js"></script>
+  <script type="text/javascript" src="Alphabetizer.js"></script>
   <script type="text/javascript" src="Output.js"></script>
   
   <script type="text/javascript">
