Initial interface of CyberMiner
New icons: Cyberminer logo and search icon.
Initial search screen.
Toolbar screen for searching after first input.

--- a/ui.cyberminer/WebContent/MasterControl.html
+++ b/ui.cyberminer/WebContent/MasterControl.html
@@ -5,9 +5,9 @@
   <title>KWIC - MASTER CONTROL</title>
   
   <link href="stylesheets/css/kwic.css" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-  <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-  <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+  <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+  <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
   <script type="text/javascript" src="Input.js"></script>
   <script type="text/javascript" src="LineStorage.js"></script>
   <script type="text/javascript" src="CircularShift.js"></script>
@@ -31,11 +31,10 @@
 	  	  
 	  	  var output = new Output(cs, as);
 	  	  output.read();
-
+	  	  
 	  }
 	  
 	  $("#readInput").button({icons: {primary: "index"}}).click(masterControl);
-	  
   });
   </script>
 </head>
