Added configuration button to search toolbar
- Fixed: the configuration button was only showing for the main screen.
Now it also shows inside toolbar search mode.

--- a/web.cyberminer/src/main/webapp/CyberMiner.html
+++ b/web.cyberminer/src/main/webapp/CyberMiner.html
@@ -170,7 +170,7 @@
 			});
         }
         
-        $( "#config" ).button({
+        $( ".config" ).button({
       		icons: {
       			primary: "ui-icon-gear"
       		}
@@ -205,11 +205,13 @@
 	<img src='stylesheets/images/cyberminer-logo.png' width="200" height="50" style="margin-top: 10px; margin-bottom: 15px; float:left;">
 	<input type="text" id="inputToolbar" value="" style="width:30%; height:32px; margin-top: 15px; margin-bottom: 15px; float:left;">
 	<button id="searchButtonToolbar" style="margin-top: 15px; margin-bottom: 15px; float:left;">Search</button>
+	
 	<img class="kwic" src='stylesheets/images/kwic-logo.gif' width="200" height="50" style="margin-top: 10px; margin-bottom: 15px; float:right;">
+	<button class="config" style="height: 30px; width: 37px; margin-top: 10px; margin-bottom: 15px; float:right;"></button>
 </div>
 <div id="navigationBar" class="toolbar">
 	<img class="kwic" src='stylesheets/images/kwic-logo.gif' width="200" height="50" style="margin-top: 10px; margin-bottom: 15px; float:right;">
-	<button id="config" style="height: 30px; width: 37px; margin-top: 10px; margin-bottom: 15px; float:right;"></button>
+	<button class="config" style="height: 30px; width: 37px; margin-top: 10px; margin-bottom: 15px; float:right;"></button>
 </div>
 
 <div id="main">
