--- a/web.cyberminer/src/main/webapp/CyberMiner.html
+++ b/web.cyberminer/src/main/webapp/CyberMiner.html
@@ -192,7 +192,8 @@
 			    url: "http://localhost:8080/web.cyberminer/api/v1/indices/noise",
 			    data: $("#name").val(),
 			    success: addNoiseWord,
-			    dataType: "text"
+          dataType: "json",
+          contentType: 'application/json'		    
 			 });
 		});
         
