--- a/web.cyberminer/src/main/webapp/KWIC.html
+++ b/web.cyberminer/src/main/webapp/KWIC.html
@@ -48,7 +48,7 @@
 	  
 	  var urls = input.split("$");
 	  for(var i = 0; i < urls.length; i++) {
-		  var urlInput = urls[i].split(",");
+		  var urlInput = urls[i].split("|");
 		  
 		  indices.push(new KWICIndex(urlInput[0], urlInput[1]));
 	  }
